kubernetes/k3s-01/workloads/changedetection.io/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cdio
  namespace: cdio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdio
  template:
    metadata:
      labels:
        app: cdio
    spec:
      containers:
        - name: cdio
          image: docker.io/linuxserver/changedetection.io:0.60.8@sha256:91a1670814112dfe910bd2dbf33fc92b856978e077024fd378923b0bf5b29343
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: cdio
              mountPath: /config
      volumes:
        - name: cdio
          persistentVolumeClaim:
            claimName: cdio
