kubernetes/k3s-01/workloads/changedetection.io/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cdio
  namespace: cdio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cdio.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: cdio
          name: cdio-ipallowlist
      services:
        - name: cdio
          kind: Service
          port: 5000
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: cdio-certificate
